--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,3 +119,13 @@
 {
     visibility: inherit;
 }
+
+.meta.meta-keywords .btn i
+{
+    margin: 0 5px;
+}
+
+.meta.meta-keywords .btn + .btn
+{
+    margin-left: 5px;
+}
