--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,3 +129,14 @@
 {
     margin-left: 5px;
 }
+
+.btn-group .btn + .btn
+{
+    margin-left: 0px !important;
+}
+
+.meta.meta-keywords .btn-group .btn i
+{
+    margin: 0 !important;
+    line-height: 14px !important;
+}
