Send 1x1.png if no profile picture

--- a/views/dashboard/userProfile.jade
+++ b/views/dashboard/userProfile.jade
@@ -13,8 +13,8 @@ title SNT-#{formatName(user.first_name, user.last_name)} | Profile
             .col-md-8.content
                 if isEditable
                     .alert.alert-warning
-                        strong You haven't added any expertise listings yet
-                        p Creating listings helps showcase each of your expertise in a better manner
+                        strong Keep improving your profile
+                        p Use expertise listing to showcase your skills better.
                         .actions-pane
                             .row
                                 .align-left.col-md-12
