--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -136,6 +136,7 @@ div.modal.fade#scheduler
                             .hidden-xs.avatar
                                 .shadow
                                     a(href=DashboardUrls.userProfile(user.id))
+                                        .initials-profile-image-large= getNameInitials(user.first_name, user.last_name)
                                         img(src=ApiUrlDelegate.userProfilePicture(user.id)+ '?imageSize=200', width='100%', height='100%')
                             .info
                                 .info-upper
