--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -42,10 +42,20 @@ script.
 script(type="text/javascript", src="//platform.linkedin.com/in.js").
     api_key                 :     753lu5ngi9suvh
     credentials_cookie      :     true
+    scope                   :     r_basicprofile r_emailaddress r_fullprofile
 script.
     function linkedinLogin()
     {
-        $.post('https://localhost:3334/linkedin');
+        $.ajax({
+            url         : 'https://localhost:3334/login/linkedin',
+            dataType    : 'json',
+            contentType : 'application/json',
+            method      : 'post',
+            success     : function(res)
+            {
+                location.reload();
+            }
+        });
     }
 script(type="in/login", data-onAuth="linkedinLogin")
 script(src='/js/app/expertRegistration/authenticate.js')
