--- a/views/payment/payment.jade
+++ b/views/payment/payment.jade
@@ -173,6 +173,7 @@ script.
     var Timezone = JSON.parse('!{JSON.stringify(Timezone)}');
 script(src='/js/app/callFlow/payment.js')
 include ../footer
+include ../linkedInLogin
 script.
     var Timezone = JSON.parse('!{JSON.stringify(Timezone)}');
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
