New LinkedIn login integrated in callflow, userProfile and login page

--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -33,7 +33,7 @@ include ../header
                                     .links-editing
                                         input.btn-primary.btn.btn-block(value='Login', type='submit')
                                     .links-editing
-                                        a.btn-linkedin.btn(href=AuthenticationUrls.linkedInLogin()) Login with LinkedIn
+                                        a.btn-linkedin.btn#linkedInLoginButton Login with LinkedIn
                                         a.btn.btn-link(href=DashboardUrls.forgotPassword()) Forgot password?
                                         a.btn.btn-link(href=AuthenticationUrls.register()) Create an account
 include ../footer
