--- a/views/linkedInLogin.jade
+++ b/views/linkedInLogin.jade
@@ -1,5 +1,5 @@
 script(type="text/javascript", src="//platform.linkedin.com/in.js").
-    api_key                 :     753lu5ngi9suvh
+    api_key                 :     !{Credentials.get(Credentials.LINKEDIN_API_KEY)}
     credentials_cookie      :     true
     scope                   :     r_basicprofile r_emailaddress r_fullprofile
 script.
@@ -9,4 +9,6 @@ script.
         $('body').append(form);
         form.submit();
     }
-script(type="in/login", data-onAuth="linkedInLogin")
+    $('#linkedInLoginButton').click(function(){
+        IN.User.authorize(linkedInLogin);
+    });
