--- a/views/payment/payment.jade
+++ b/views/payment/payment.jade
@@ -164,7 +164,7 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
                     .form-group
                         a.btn.btn-facebook.btn-block#facebookLink() Login with Facebook
                     .form-group
-                        a.btn.btn-linkedin.btn-block#linkedInLink() Login with LinkedIn
+                        a.btn.btn-linkedin.btn-block#linkedInLoginButton Login with LinkedIn
                     span.pull-right
                         a#login-link.register(href='javascript:void(0)') Login
                         a#register-link.login(href='javascript:void(0)') Register
