No need for widget table Terms of use page

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -4,9 +4,9 @@ div.footer
             nav.navbar.navbar-default
                 ul.nav.navbar-nav
                     li
-                        a(href='#') About Us
+                        a(href='/terms-of-use') Terms of Use
                     li
-                        a(href='/privacy-policy') Privacy Policy
+                        a(href='/privacy') Privacy Policy
                     li
         div.row.copyright
             div.hidden-xs.col-sm-9
