--- a/views/404.jade
+++ b/views/404.jade
@@ -4,7 +4,7 @@ head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
-    link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+    link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
     link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
