--- a/views/dashboard/cards/BasicInfoCard.jade
+++ b/views/dashboard/cards/BasicInfoCard.jade
@@ -16,7 +16,7 @@
                 .info-upper
                     .user-displayname= formatName(user.first_name, user.last_name, user.title)
                     if user.date_of_birth
-                        .user-age= moment(parseInt(user.date_of_birth)).fromNow(true)
+                        .user-age= moment(user.date_of_birth,'DD-MM-YYYY').fromNow(true)
                 .info-lower
                     .user-locale New Delhi
                     .user-timezone
