Phone call pricing according to scheme UI fixes

--- a/views/dashboard/home.jade
+++ b/views/dashboard/home.jade
@@ -42,6 +42,8 @@ head
         jQuery(document).ready(function() {
             jQuery(".retina-image").retina();
         });
+
+title SearchNTalk
 .masthead.inverted(role='banner')
     .container
         .masthead-brand
