Basic info edit fixed

--- a/views/dashboard/userProfile.jade
+++ b/views/dashboard/userProfile.jade
@@ -1,6 +1,6 @@
 include ../header
 include dashboardHeader
-title SNT-#{formatName(user.first_name, user.last_name)} | Profile
+title ST-#{formatName(user.first_name, user.last_name)}
 .matter
     .container
         .row
