Page titles Expertise add

--- a/views/dashboard/cards/ExpertiseCard.jade
+++ b/views/dashboard/cards/ExpertiseCard.jade
@@ -81,3 +81,4 @@ if isEditable
                     | Editing Expertise
                     input(type='hidden', name='id')
                     input.btn.btn-primary.done-editing-schedules(type='submit', value='Save')
+                    button.btn.btn-danger.done-editing-schedules.deleteExpertiseBtn Delete
