--- a/views/memberRegistration/authorize.jade
+++ b/views/memberRegistration/authorize.jade
@@ -1,4 +1,4 @@
-title SnT | #{integration.title} | #{formatRole(member.role)} registration
+title ST | #{integration.title} | #{formatRole(member.role)} registration
 include ../header
 .matter
     .container
