--- a/views/dashboard/callDetails.jade
+++ b/views/dashboard/callDetails.jade
@@ -1,6 +1,6 @@
-extends header
+include ../header
+title SearchNTalk - Call Details
 block content
-    title SearchNTalk - Call Details
     .clearfix
     table.table-bordered.table.sortable#users
         thead
@@ -22,3 +22,4 @@ block content
                 td= formatMoney(call.price_per_min, call.price_currency)
     script(src='/js/lib/bootstrap-sortable.js')
     link(rel='stylesheet', href='/css/bootstrap-sortable.css')
+include ../footer
