--- a/views/memberRegistration/complete.jade
+++ b/views/memberRegistration/complete.jade
@@ -1,5 +1,5 @@
 include ../header
-title SearchNTalk - Registration Complete
+title ST | Registration Complete
 .matter
     .container
         .row
