--- a/public/css/combined.css
+++ b/public/css/combined.css
@@ -9779,6 +9779,7 @@ hr {
     margin-left: 5px;
 }
 
+
 .datepicker
 {
     z-index:1151 !important;
@@ -9904,4 +9905,11 @@ hr {
     border: medium none;
     height: 22px;
     padding: 4px;
+}
+
+.graphic
+{
+    font-size: 24px;
+    line-height: 28px;
+    margin-left: 5px;
 }
