Linkedin lib fail handled

--- a/views/linkedInLogin.jade
+++ b/views/linkedInLogin.jade
@@ -10,5 +10,8 @@ script.
         form.submit();
     }
     $('#linkedInLoginButton').click(function(){
-        IN.User.authorize(linkedInLogin);
+        if (IN)
+            IN.User.authorize(linkedInLogin);
+        else
+            bootbox.alert("An error occurred while connecting to linkedin :\(");
     });
