Linkedin lib fail handled

--- a/views/linkedInLogin.jade
+++ b/views/linkedInLogin.jade
@@ -10,7 +10,7 @@ script.
         form.submit();
     }
     $('#linkedInLoginButton').click(function(){
-        if (IN)
+        if (window.IN)
             IN.User.authorize(linkedInLogin);
         else
             bootbox.alert("An error occurred while connecting to linkedin :\(");
